Configure enabled builtin commands instead of disabled ones
